--- a/content/post/genomics-model-averaging.Rmd
+++ b/content/post/genomics-model-averaging.Rmd
@@ -1,7 +1,7 @@
 ---
 title: Model Averaging in Genomics?
 author: Drew Tyre
-date: '2019-02-25'
+date: '2021-02-25'
 draft: yes
 categories:
   - Research
@@ -11,7 +11,7 @@ tags_include:
 slug: model-averaging-genomics
 ---
 
-Over a year ago I received an email about my model averaging post:
+Over a year ago I received an email about [my model averaging post](https://drewtyre.rbind.io/post/rebutting_cade/):
 
 > I came across your blog post https://drewtyre.rbind.io/post/rebutting_cade/ searching for information about model combination and model averaging.
 
@@ -32,9 +32,15 @@ In any case, from a Bayesian perspective [Hooten et al.](https://projecteuclid.o
 
 But, is it impossible? 
 
-Two scenarios about reality. In one, there is a small set of weak predictors, 
+## Make some data
+
+tl;dr: A word of warning: what follows is me thinking while typing. If you're looking for a coherent story
+with a clear conclusion, you will be disappointed.
+
+In the model averaging world, there are two scenarios of reality. In the Bayesian 
+scenario, there is a small set of weak predictors, 
 all the others are zero, and all of the predictors are in the model set.
-In the second scenario many variables matter with exponentially decreasing effect
+In the AIC scenario many variables matter with exponentially decreasing effect
 sizes, and a random sample of the variables are included in the model set. 
 
 ```{r intro, message=FALSE, warning=FALSE}
@@ -45,7 +51,7 @@ s1 <- function(N = 100, M = 10, effects = c(1, 0.5, 0.25)){
   effects <- c(effects, rep(0, M-length(effects)))
   logity <- x %*% effects
   y <- rbinom(N, size = 1, prob = 1/(1 + exp(-logity)))
-  return(tibble(y = y, x = x))
+  return(tibble(y = y, x = x)) # experiment -- this puts a matrix in a column
 }
 glm(y~x, family = binomial, data =s1())
 ```
@@ -63,7 +69,11 @@ glm(y~x, family = binomial, data =s2())
 ```
 
 `s1()` generates data according to the view of reality behind BIC. `s2()` generates
-data according to the view of reality behind AIC. Now I need a plausible model
+data according to the view of reality behind AIC. 
+
+# Make some models
+
+Now I need a plausible model
 set. I don't know what genomics people do, but I imagine they test individual
 genes first. I will also put in a null model to bound the set. Normally I would 
 put in a global model, but if there are hundreds or thousands of genes that would
@@ -111,9 +121,17 @@ ggplot(data = hr,
 ```
 
 That's kind of a cool plot. The two predictors that give the strongest results are well separated
-from the rest. Now, what is a "compound prediction"? If it is a model averaged prediction, I think
+from the rest. How does the model averaged prediction compare? I think
 that has to be necessarily worse than the top predictor because the model averaging will shrink the 
-prediction back towards zero. Also, I'm not really sure how to get a single hazard ratio. Reading 
+prediction back towards zero, but let's see.
+
+```{r}
+
+
+```
+
+
+Now, what is a "compound prediction"?  Also, I'm not really sure how to get a single hazard ratio. Reading 
 between the lines, I wonder if they are doing something with the predictor variables, like using
 the sum of the top predictors. I'll use the top 3 because they had hazard ratios significantly 
 different from 1.
@@ -162,5 +180,6 @@ So that *is* higher, but not by much. I guess I could get a single hazard ratio 
 a model averaged prediction and then using it in a glm. 
 
 ```{r}
+
 ```
 
