--- a/content/post/covid-19_in_R.Rmd
+++ b/content/post/covid-19_in_R.Rmd
@@ -5,7 +5,7 @@ date: '`r Sys.Date()`'
 output: 
   html_document:
     code_folding: show
-draft: yes
+draft: no
 slug: COVID-19_and_R
 tags_include:
 - R
