--- a/content/post/covid-19_in_R_II.Rmd
+++ b/content/post/covid-19_in_R_II.Rmd
@@ -5,7 +5,7 @@ date: '`r Sys.Date()`'
 output: 
   html_document:
     code_folding: hide
-draft: no
+draft: yes
 slug: COVID-19_and_R_II
 tags_include:
 - R
