edits from kelly

--- a/content/post/covid-19_in_R_III.Rmd
+++ b/content/post/covid-19_in_R_III.Rmd
@@ -150,7 +150,7 @@ Reducing the number of people you come in contact with by 25% would postpone the
 go on for quite a while! Months. Which leads me to ... 
 
 - Don't buy enough toilet paper for a year.  "Stocking up" reduces the
-number of times you go to the store for supplies, not enable you to weather the apocalypse. 
+number of times you go to the store for supplies, and isn't meant to enable you to weather the apocalypse. 
 If you're in a grocery store, and there is some toilet paper, buy a package even if you don't need it.
 But don't buy 20, that's just being silly. And rushing around to every store in town looking for
 toilet paper just increases your contact rate! 
@@ -161,7 +161,7 @@ even so, because that helps the broader community including people that are more
 severe disease from the virus. 
 
 - Do offer to help elderly or unhealthy neighbors and relatives. Offer to bring them supplies so 
-they don't have to risk going out. If you do that, when you deliver keep your distance! You don't
+they don't have to risk going out. If you do that, when you deliver, keep your distance! You don't
 want to be the vector for someone getting ill. 
 
 Stay well everyone, and wash your hands!
